--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,1 +1,14 @@
-{}
+{
+  "home": {
+    "tabs": {
+      "outings": "Outings",
+      "hotels": "Hotels",
+      "transportation": "Transportation"
+    },
+    "outings": {
+      "activePrograms": "Active Programs",
+      "advertisements": "Advertisements",
+      "partners": "Partners"
+    }
+  }
+}
