--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,4 +1,16 @@
 {
+  "auth": {
+    "login": "تسجيل الدخول",
+    "welcome": "أهلاً بعودتك! الرجاء إدخال بياناتك.",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "remember": "تذكرني",
+    "forgot": "هل نسيت كلمة المرور؟",
+    "firstTime": "هل أنت جديد؟ سجل مجاناً.",
+    "loginSuccess": "تم تسجيل الدخول بنجاح.",
+    "loginError": "فشل تسجيل الدخول. الرجاء المحاولة مرة أخرى.",
+    "invalidCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة."
+  },
   "home": {
     "tabs": {
       "outings": "البرامج",
@@ -10,5 +22,26 @@
       "advertisements": "الاعلانات",
       "partners": "الشركاء"
     }
-  }
+  },
+  "serverFailure": {
+    "connectionTimeout": "انتهت مهلة الاتصال بالخادم. يرجى التحقق من اتصالك بالإنترنت.",
+    "sendTimeout": "انتهت مهلة إرسال الطلب. يرجى المحاولة مرة أخرى.",
+    "receiveTimeout": "انتهت مهلة استلام الاستجابة. يرجى المحاولة لاحقًا.",
+    "badCertificate": "شهادة الأمان غير صالحة.",
+    "cancel": "تم إلغاء الطلب. يرجى المحاولة مرة أخرى.",
+    "connectionError": "فشل الاتصال بالشبكة. يرجى التحقق من اتصالك بالإنترنت.",
+    "noInternet": "لا يوجد اتصال بالإنترنت.",
+    "unknownError": "حدث خطأ غير متوقع.",
+    "badResponse": {
+      "400": "بيانات الطلب غير صحيحة.",
+      "401": "يتطلب تسجيل الدخول.",
+      "403": "تم رفض الوصول.",
+      "404": "المورد غير موجود.",
+      "408": "انتهت مهلة الطلب.",
+      "500": "خطأ داخلي في الخادم.",
+      "503": "الخدمة غير متاحة حاليًا.",
+      "default": "فشل الطلب برمز الحالة {statusCode}."
+    }
+  },
+  "cacheFailure": "خطأ في التخزين المؤقت: {error}"
 }
