--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -32,5 +32,26 @@
       "advertisements": "الاعلانات",
       "partners": "الشركاء"
     }
-  }
+  },
+  "serverFailure": {
+    "connectionTimeout": "انتهت مهلة الاتصال بالخادم. يرجى التحقق من اتصالك بالإنترنت.",
+    "sendTimeout": "انتهت مهلة إرسال الطلب. يرجى المحاولة مرة أخرى.",
+    "receiveTimeout": "انتهت مهلة استلام الاستجابة. يرجى المحاولة لاحقًا.",
+    "badCertificate": "شهادة الأمان غير صالحة.",
+    "cancel": "تم إلغاء الطلب. يرجى المحاولة مرة أخرى.",
+    "connectionError": "فشل الاتصال بالشبكة. يرجى التحقق من اتصالك بالإنترنت.",
+    "noInternet": "لا يوجد اتصال بالإنترنت.",
+    "unknownError": "حدث خطأ غير متوقع.",
+    "badResponse": {
+      "400": "بيانات الطلب غير صحيحة.",
+      "401": "يتطلب تسجيل الدخول.",
+      "403": "تم رفض الوصول.",
+      "404": "المورد غير موجود.",
+      "408": "انتهت مهلة الطلب.",
+      "500": "خطأ داخلي في الخادم.",
+      "503": "الخدمة غير متاحة حاليًا.",
+      "default": "فشل الطلب برمز الحالة {statusCode}."
+    }
+  },
+  "cacheFailure": "خطأ في التخزين المؤقت: {error}"
 }
