--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -33,6 +33,12 @@
       "partners": "Partners"
     }
   },
+  "programDetails": {
+    "Overview": "Overview",
+    "Supplement": "Supplement",
+    "Photo Gallery": "Photo Gallery",
+    "Reviews": "Reviews"
+  },
   "serverFailure": {
     "connectionTimeout": "Connection to the server timed out. Please check your internet connection.",
     "sendTimeout": "Request sending timed out. Please try again.",
