--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -28,7 +28,7 @@
       "transportation": "النقل"
     },
     "outings": {
-      "activePrograms": "البرامج الحالية",
+      "activePrograms": "الرحلات",
       "advertisements": "الاعلانات",
       "partners": "الشركاء"
     }
