--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -28,7 +28,7 @@
       "transportation": "Transportation"
     },
     "outings": {
-      "activePrograms": "Active Programs",
+      "activePrograms": "Packages",
       "advertisements": "Advertisements",
       "partners": "Partners"
     }
